--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "mpvueTemplateProjectVersion": "0.1.0",
   "description": "A Mpvue project",
-  "author": "AprAiya",
+  "author": "wudi <ustcwudi@126.com>",
   "private": true,
   "scripts": {
     "dev:wx": "node build/dev-server.js wx",
