--- a/src/app.json
+++ b/src/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/index/main",
     "pages/list/main",
-    "pages/map/main",
+    "pages/column/main",
     "pages/mine/main"
   ],
   "window": {
@@ -23,10 +23,10 @@
       "iconPath": "static/images/home.png",
       "selectedIconPath": "static/images/_home.png"
     }, {
-      "text": "地图",
-      "pagePath": "pages/map/main",
-      "iconPath": "static/images/map.png",
-      "selectedIconPath": "static/images/_map.png"
+      "text": "专栏",
+      "pagePath": "pages/column/main",
+      "iconPath": "static/images/column.png",
+      "selectedIconPath": "static/images/_column.png"
     }, {
       "text": "我的收藏",
       "pagePath": "pages/mine/main",
