--- a/src/app.json
+++ b/src/app.json
@@ -23,7 +23,7 @@
       "iconPath": "static/images/home.png",
       "selectedIconPath": "static/images/_home.png"
     }, {
-      "text": "专栏",
+      "text": "推荐",
       "pagePath": "pages/column/main",
       "iconPath": "static/images/column.png",
       "selectedIconPath": "static/images/_column.png"
